Hover animation added. Cannot get it to transform to the left while hovering. Also cannot get lasers to shoot out yet. Will investigate more in the future.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,25 @@ data/blueprints.dat
 data/AntagTokens.sav
 data/AdminPrefs.sav
 crossbow.dmi
+config/admins.txt
+maps/config/standard.dm
+maps/cogmap.dmm
+goonstation.rsc.lk
+goonstation.rsc
+goonstation.lk
+goonstation.int
+goonstation.dyn.rsc.lk
+goonstation.dyn.rsc
+goonstation.dmb
+data/logs/2019/08-August/07-Wednesday.log
+data/logs/2019/08-August/06-Tuesday.log
+data/logs/2019/08-August/05-Monday.log
+data/iconCache.sav.lk
+data/compid_file.sav.lk
+data/blueprints.dat.lk
+config/admins.txt
+maps/config/standard.dm
+maps/cogmap.dmm
+goonstation.int
+config/admins.txt
+config/admins.txt
